Changed image from clipping mask to raster mask, fixed some errors

--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,6 @@ button,
     padding: 0;
     border: 0;
     overflow: hidden;
-    *zoom: 1;
 }
 
 .header-wrapper {
@@ -132,7 +131,6 @@ button,
     padding: 0;
     border: 0;
     overflow: hidden;
-    *zoom: 1;
 }
 
 #navigation-wrapper nav#navigation ul li {
@@ -190,13 +188,8 @@ button,
     }
 }
 
-.circle-img {
-    -webkit-clip-path: circle(49% at 50% 50%);
-    clip-path: circle(49% at 50% 50%);
-}
-
 aside img {
-    width: 233;
+    width: 233px;
     margin: 0 0 28px 0;
 }
 
@@ -229,7 +222,6 @@ aside img {
     padding: 0;
     border: 0;
     overflow: hidden;
-    *zoom: 1;
     width: 80%;
     margin: 0 10% 6em 10%;
 }
